--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -12,6 +12,13 @@
             type: Phaser.AUTO,
             width: 800,
             height: 600,
+            physics: {
+                default: 'arcade',
+                arcade: {
+                    gravity: { y: 300 },
+                    debug: false
+                }
+            },
             scene: {
                 preload: preload,
                 create: create,
@@ -23,10 +30,16 @@
 
         function preload() {
             this.load.image('hero', 'assets/hero_single.png');
+            this.load.image('ground', 'assets/ground_single.png');
+            this.load.image('background', 'assets/background.png');
         }
 
         function create() {
-            this.add.image(300, 200, 'hero');
+            this.add.image(400, 300, 'background')
+            hero = this.physics.add.sprite(200, 200, 'hero');
+            hero.setScale(0.5, 0.5);
+            grounds = this.physics.add.staticGroup();
+            grounds.create(400, 400, 'ground').setScale(0.5, 0.5).refreshBody();
         }
 
         function update() {
