--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -36,13 +36,26 @@
 
         function create() {
             this.add.image(400, 300, 'background')
-            hero = this.physics.add.sprite(200, 200, 'hero');
+            hero = this.physics.add.sprite(200, 100, 'hero');
+            hero.setCollideWorldBounds(true);
+            hero.setBounce(0.2)
             hero.setScale(0.5, 0.5);
             grounds = this.physics.add.staticGroup();
-            grounds.create(400, 400, 'ground').setScale(0.5, 0.5).refreshBody();
+            grounds.create(200, 400, 'ground').setScale(0.5, 0.5).refreshBody();
+            this.physics.add.collider(hero, grounds);
         }
 
         function update() {
+            cursors = this.input.keyboard.createCursorKeys();
+            if (cursors.left.isDown) {
+                hero.setVelocityX(-160);
+            }
+            else if (cursors.right.isDown) {
+                hero.setVelocityX(160);
+            }
+            else {
+                hero.setVelocityX(0);
+            }
         }
     </script>
 
