--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -35,7 +35,9 @@
         }
 
         function create() {
-            this.add.image(400, 300, 'background')
+            camera = this.cameras.main
+            background = this.physics.add.sprite(camera.midPoint.x, camera.midPoint.y, 'background')
+            background.body.setAllowGravity(false)
             hero = this.physics.add.sprite(200, 100, 'hero');
             hero.setCollideWorldBounds(true);
             hero.setBounce(0.2)
@@ -43,6 +45,8 @@
             grounds = this.physics.add.staticGroup();
             grounds.create(200, 400, 'ground').setScale(0.5, 0.5).refreshBody();
             this.physics.add.collider(hero, grounds);
+            camera.startFollow(background)
+            background.setVelocityY(50)
         }
 
         function update() {
