--- a/Phaser/index.html
+++ b/Phaser/index.html
@@ -56,14 +56,21 @@
             scoreFactor = 1
 
             // Assets
-            this.load.image('hero', 'assets/hero_single.png');
+            this.load.spritesheet('hero', 'assets/hero_single.png', { frameWidth: 80, frameHeight: 140, startFrame: 2, space:19 });
             this.load.image('enemy', 'assets/enemy_single.png');
             this.load.image('ground', 'assets/ground_single.png');
             this.load.image('background', 'assets/background.png');
             this.load.image('empty', 'assets/empty.png');
             this.load.audio('death', 'assets/death.wav');
             this.load.audio('enemy_kill', 'assets/enemy_kill.wav');
-            this.load.audio('score', 'assets/score.mp3')
+            this.load.audio('score', 'assets/score.mp3');
+
+            this.anims.create({
+                key: 'stay',
+                frames: this.anims.generateFrameNumbers('hero', { start: 0, end: 3 }),
+                frameRate: 10,
+                repeat: -1
+            });
         }
 
         function create() {
@@ -82,6 +89,7 @@
         }
 
         function update() {
+            hero.anims.play('stay')
             cursors = this.input.keyboard.createCursorKeys();
             if (cursors.left.isDown) {
                 hero.setVelocityX(-heroVelocity);
